# xennic

./: .dockerignore  .eslintrc.cjs  .gitignore  AGENTS.md  ALPHA_CHECKLIST.md  ALPHA_READINESS_UPDATED.md  CACHE_PLATFORM_REPORT.md  EVENT_PLATFORM_REPORT.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_PROGRESS.md  OBSERVABILITY_REPORT.md  PLATFORM_CORE_REPORT.md  PROJECT_TREE.txt  README.md  TECHNICAL_DEBT_UPDATED.md  TEST_COMMANDS.sh  eslint.config.mjs  nest-cli.json  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  report-k1-finalization-2026-06-26.txt  report.txt  turbo.json
workspace/services/engineering-service/: .coverage  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt
workspace/services/engineering-service/src/: main.py
workspace/services/engineering-service/src/core/: base_calculator.py  exceptions.py  registry.py  unit_converter.py  validation.py
workspace/services/engineering-service/src/schemas/: power_system.py
workspace/services/engineering-service/tests/integration/: test_basic_api.py  test_cable_api.py
workspace/services/engineering-service/tests/test_calculators/: test_active_power.py  test_apparent_power.py  test_basic_integration.py  test_ohms_law.py  test_power_factor.py  test_reactive_power.py
workspace/services/engineering-service/tests/test_core/: test_base_calculator.py  test_registry.py  test_unit_converter.py  test_validation.py
workspace/services/engineering-service/tests/test_energy_analyzer/: test_energy_analyzer.py
workspace/services/engineering-service/tests/test_power_system/: test_load_flow.py  (+3 more)
(+1343 files in other folders)
